# PyConnect4

./: .gitignore  LICENSE  README.md  board.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: tests.yml
ai/benchmark/src/: benchmark.py
ai/src/: board.py  negamax.py
src/: benchmark.py  play.py
src/PyConnect4/: __init__.py  board.py
src/ai/: __init__.py  mcts.py  move_ordering.py  negamax.py  node.py  solver.py
src/board/: board.py
tests/: __init__.py  test_board.py
