[metadata]
name = PyConnect4
version = 1.0.0
author = Mylo Bishop
author_email = mylo.bishops@gmail.com
description = An optimised Connect 4 engine built in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
liscense_file = LICENSE
platform = unix, linux, osx, cygwin, win32
url = https://github.com/MyloBishop/PyConnect4
project_urls =
    Bug Tracker = https://github.com/MyloBishop/PyConnect4/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = 
    PyConnect4
install_requires =
    termcolor>=2.0.0
python_requires = >=3.7
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
PyConnect4 = py.typed

[flake8]
max-line-length = 127
per-file-ignores = __init__.py:F401